--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -9,6 +9,11 @@
 
   --x-slider-gap: 16px;
 
+  --x-slider-background-color: transparent;
+
+  --x-slider-slide-min-height: 0px;
+  --x-slider-slide-max-height: none;
+
   --x-slider-transition-duration: 0.6s;
   --x-slider-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
 
@@ -34,6 +39,8 @@
   overflow: hidden;
   contain: paint;
 
+  background-color: var(--x-slider-background-color);
+
   /*
     https://github.com/WICG/EventListenerOptions/blob/gh-pages/explainer.md
   */
@@ -51,6 +58,9 @@
 #slidesWrapper {
   display: flex;
   align-items: stretch;
+
+  min-height: var(--x-slider-slide-min-height);
+  max-height: var(--x-slider-slide-max-height);
 
   will-change: transform;
 }
