--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -1,3 +1,15 @@
+/*
+Consistency between navigation and pagination hover/active/focus styles
+
+Focus-ring overrides should apply only if host-context has .focus-ring-js
+
+Consider switching from SVG to other shape in order to keep color freedom?
+(or looks at tricks like https://codepen.io/noahblon/post/coloring-svgs-in-css-background-images)
+(using filter? need to choose the right starting color)
+
+https://codepen.io/tigt/post/optimizing-svgs-in-data-uris
+*/
+
 :host {
   position: relative;
 
@@ -17,9 +29,9 @@
   --x-slider-transition-duration: 0.6s;
   --x-slider-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
 
-  --x-slider-navigation-color: #000;
   --x-slider-navigation-background-color-active: #ddd;
   --x-slider-navigation-background-color-focus: #f0f0f0;
+  --x-slider-navigation-button-size: 48px;
   --x-slider-navigation-icon-size: 24px;
 
   --x-slider-pagination-color: #999;
@@ -190,11 +202,10 @@
   align-items: center;
   justify-content: center;
 
-  min-width: 48px;
-  min-height: 48px;
+  min-width: var(--x-slider-navigation-button-size);
+  min-height: var(--x-slider-navigation-button-size);
   padding: 0;
 
-  color: var(--x-slider-navigation-color);
   background: none;
   border: 0;
   border-radius: 50%;
@@ -212,7 +223,8 @@
   right: 0;
 }
 
-#navigationSlot::slotted(button)::before {
+#navigationSlot::slotted(button)::before,
+#navigationSlot::slotted(button)::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -220,7 +232,21 @@
   left: 0;
 
   content: '';
+}
 
+#navigationSlot::slotted(button)::after {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>');
+  background-size: var(--x-slider-navigation-icon-size);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#navigationSlot::slotted(#next)::after {
+  transform: rotateZ(180deg);
+}
+
+
+#navigationSlot::slotted(button)::before {
   background-color: var(--x-slider-navigation-background-color-focus);
 
   opacity: 0;
