--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -235,7 +235,7 @@ https://codepen.io/tigt/post/optimizing-svgs-in-data-uris
 
   background-color: var(--x-slider-navigation-color);
 
-  mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>');
+  mask-image: svg-load('./arrow-left.svg', fill: #000);
 }
 
 #navigationSlot::slotted(#next)::after {
