fix(styles): override default button background for pagination

--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -115,6 +115,7 @@ https://codepen.io/tigt/post/optimizing-svgs-in-data-uris
   padding: 0;
 
   border: none;
+  background: none;
 
   font-size: inherit;
 
