GH-3 feat(aria-live): adding aria-live region

--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -181,6 +181,22 @@ Consistency between navigation and pagination hover/active/focus styles
   user-select: none;
 }
 
+#ariaSlot::slotted(*) {
+  position: absolute;
+
+  height: 1px;
+  width: 1px;
+
+  margin: -1px;
+  padding: 0;
+
+  clip: rect(0 0 0 0);
+
+  overflow: hidden;
+
+  border: 0;
+}
+
 #navigation {
   display: none;
 }
