GH-10 refactor(demo): same convetion for JS and CSS, better syntax highlighting

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,10 +1,21 @@
+body {
+  margin: 0;
+}
+
 .js-focus-visible :focus:not(.focus-visible) {
   outline: 0;
 }
 
 pre {
+  padding-left: 2em;
+  padding-right: 2em;
   margin-top: 60px !important;
   font-size: 14px;
+}
+
+code {
+  display: block;
+  margin-left: 3em;
 }
 
 #backToIndex {
@@ -13,6 +24,8 @@ pre {
   right: 0;
 
   padding: 1em;
+  border: 1px dashed currentColor;
+  font-family: monospace;
 
-  border: 1px solid black;
+  color: inherit;
 }
