--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -14,7 +14,7 @@ pre {
   font-size: 14px;
 }
 
-code {
+pre > code {
   display: block;
   margin-left: 3em;
 }
@@ -22,6 +22,11 @@ code {
 h1 {
   padding-left: 1rem;
   padding-right: 12rem;
+}
+
+h1 code {
+  background-color: #eee;
+  padding: .3em .6em;
 }
 
 #backToIndex {
