fix(pagination): added box-sixing to pagination dots

--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -144,6 +144,7 @@ Consistency between navigation and pagination hover/active/focus styles
   height: var(--x-slider-pagination-size-dot);
 
   border-radius: 50%;
+  box-sizing: border-box;
 
   background-color: var(--x-slider-pagination-color);
 
